--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DB접속을 위한 설정값
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shoppingmall?useSSL=false&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shoppingmall?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
